<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radiation_sensor_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for BG51 Radiation Sensor</description>
  <maintainer email="delicat.kuba@gmail.com">Jakub Delicat</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>radiation_msgs</depend>
  <depend>python3-serial</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
<!-- This package was generated using the Turtle Nest ROS 2 package creator -->
